@@ -1,5 +1,5 @@
 #
-# Copyright 2017-2019 Martin Goellnitz.
+# Copyright 2017-2019 Martin Goellnitz, Markus Schwarz.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,25 +13,25 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-FROM maven:3.6-jdk-11
+FROM provocon/alpine-docker-jdk11-maven3.6:latest
 
 # sencha:
+ARG SENCHA_VERSION=6.7.0.63
 ENV PATH $PATH:/usr/local/sencha
 
 RUN \
-  apt-get update && \
-  apt-get -yq install zip p7zip-full parallel && \
-  apt-get -yq install git sudo && \
-  curl http://cdn.sencha.com/cmd/6.7.0.63/no-jre/SenchaCmd-6.7.0.63-linux-amd64.sh.zip > /usr/local/sencha.zip && \
+  apk update && \
+  apk add xz zip p7zip parallel sudo && \
+  apk add font-noto && \
+  fc-cache -fv && \
+  curl -o /usr/local/sencha.zip http://cdn.sencha.com/cmd/${SENCHA_VERSION}/no-jre/SenchaCmd-${SENCHA_VERSION}-linux-amd64.sh.zip && \
   cd /usr/local && \
   unzip /usr/local/sencha.zip && \
-  /usr/local/SenchaCmd-6.7.0.63-linux-amd64.sh -q -dir /usr/local/sencha/6.7.0.63 && \
+  /usr/local/SenchaCmd-${SENCHA_VERSION}-linux-amd64.sh -q -d --illegal-access=warn -dir /usr/local/sencha/${SENCHA_VERSION} && \
   mkdir /usr/local/sencha/repo && \
   chmod 777 /usr/local/sencha/repo && \
-  grep -v export.PATH.*sencha.* ~/.bashrc > ~/.brc && \
-  cat ~/.brc > ~/.bashrc && \
-  rm -f ~/.brc && \
-  curl -L https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 > phantomjs.tar.bz2 && \
+  ln -s /usr/local/sencha/sencha-${SENCHA_VERSION} /usr/local/bin/sencha && \
+  curl -Lo phantomjs.tar.bz2  https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 && \
   tar xjf phantomjs.tar.bz2 && \
   ln -s /usr/local/phantomjs-*/bin/phantomjs /usr/local/bin/phantomjs && \
-  rm -f sencha.zip phantomjs.tar.bz2 SenchaCmd-6.7.0.63-linux-amd64.sh
+  rm -f sencha.zip phantomjs.tar.bz2 SenchaCmd-${SENCHA_VERSION}-linux-amd64.sh
